tests/fixtures/invalid/err009_parallel_no_then_strict.rex
parallel limit 2 {
  observe page "https://example.com" as $a
}
